--- a/style.css
+++ b/style.css
@@ -131,3 +131,46 @@ footer p {
     font-size: 22px;
   }
 }
+
+.projekti-lista {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+}
+
+.projekti {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 8px;
+  padding: 15px;
+  
+  background-color: #1b1b1d;
+  color: #eee;         
+  text-align: center;
+
+
+  box-shadow: 0 4px 8px rgba(0,0,0,0.5);
+  transition: transform 0.2s;
+}
+
+.projekti:hover {
+  transform: translateY(-5px);
+}
+
+.projekti img {
+  width: 100%;
+  height: auto;
+  border-radius: 6px;
+}
+
+
+.projekti a {
+  color: #1e90ff; 
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.projekti a:hover {
+  text-decoration: underline;
+}
